--- a/WebContent/manifest.json
+++ b/WebContent/manifest.json
@@ -1,6 +1,6 @@
 {
-	"short_name": "프로젝트 이름(아이콘의 이름으로 표시됨)",
-	"name": "설치 배너에 표시되는 이름(검색의 키워드로 사용됨)",
+	"short_name": "hello-pwa",
+	"name": "pwa",
 	"icons": [
 		{
 			"src": "images/icons/favicon.png",
@@ -18,7 +18,7 @@
 			"type": "image/png"
 		}
 	],
-	"start_url": "./index.html",
+	"start_url": "./index.jsp",
 	"display": "standalone",
 	"orientation": "portrait",
 	"theme_color": "#0087F7",
